[package]
name = "speech-parser-rs"
version = "0.1.0"
authors = ["Enrico <enrico.casini@gmail.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.13.0"
